Add sonarlint fixes